<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_activity_title">About</string>
    <string name="about_app_license">Source code available on &lt;a href=\"https://gerrit.wikimedia.org/r/#/admin/projects/apps/android/wikipedia\">Gerrit&lt;/a> and &lt;a href=\"https://github.com/wikimedia/apps-android-wikipedia\">GitHub&lt;/a> under the &lt;a href=\"https://phabricator.wikimedia.org/diffusion/APAW/browse/master/COPYING?view=raw\">Apache 2.0 License&lt;/a>. Unless otherwise specified, content is available under a &lt;a href=\"https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License\">Creative Commons Attribution-ShareAlike License&lt;/a>.</string>
    <string name="about_app_license_heading">License</string>
    <string name="about_article_section">About this article</string>
    <string name="about_contributors">&lt;a href=https://www.mediawiki.org/wiki/Wikimedia_Apps/Team/Android>Team page&lt;/a></string>
    <string name="about_contributors_heading">Contributors</string>
    <string name="about_description">About the Wikipedia app</string>
    <string name="about_libraries_heading">Libraries used</string>
    <string name="about_translators_heading">Translators</string>
    <string name="about_translators_translatewiki">This app was translated by the volunteer translators at &lt;a href=https://translatewiki.net>translatewiki.net&lt;/a>.</string>
    <string name="about_wikipedia_url">https://en.wikipedia.org/wiki/Wikipedia:About</string>
    <string name="about_wmf">A product of the &lt;a href=https://wikimediafoundation.org/>Wikimedia Foundation&lt;/a></string>
    <string name="abusefilter_text_disallow">An automated filter has identified this edit as potentially unconstructive, or potential vandalism.&lt;br />&lt;br />Wikipedia is an encyclopedia and only neutral, notable content belongs here.</string>
    <string name="abusefilter_text_warn">An automated filter has identified this edit as potentially unconstructive. It may contain one or more of the following:&lt;br />&lt;br />· Typing in all caps&lt;br />· Blanking articles or spamming&lt;br />· Irrelevant external links or images&lt;br />· Repeating characters</string>
    <string name="abusefilter_title_disallow">You cannot publish this edit. Please go back and change it.</string>
    <string name="abusefilter_title_warn">This may be an unconstructive edit. Are you sure you want to publish it?</string>
    <string name="account_creation_password_hint">Password</string>
    <string name="account_editing_blocked_dialog_cancel_button_text">Cancel</string>
    <string name="account_editing_blocked_dialog_ok_button_text">OK</string>
    <string name="account_name">@string/wikimedia</string>
    <string name="account_type">org.wikimedia</string>
    <string name="add_square_brackets_to_string">[%s]</string>
    <string name="add_wikipedia_languages_text">Add Wikipedia languages</string>
    <string name="address_copied">Address copied to clipboard.</string>
    <string name="all_tab_items_closed">All tabs closed.</string>
    <string name="alpha_update_notification_text">Tap to download</string>
    <string name="alpha_update_notification_title">New alpha update available</string>
    <string name="android_app_edit_help_url">https://m.mediawiki.org/wiki/Wikimedia_Apps/Suggested_edits</string>
    <string name="android_app_faq_url">https://www.mediawiki.org/wiki/Wikimedia_Apps/Android_FAQ</string>
    <string name="android_app_request_an_account_url">https://en.wikipedia.org/wiki/Wikipedia:Request_an_account</string>
    <string name="app_name">@string/app_name_prod</string>
    <string name="app_name_alpha">Wikipedia Alpha</string>
    <string name="app_name_beta">Wikipedia Beta</string>
    <string name="app_name_prod">Wikipedia</string>
    <string name="app_settings">App settings</string>
    <string name="app_shortcuts_continue_reading">Continue reading</string>
    <string name="app_shortcuts_random">Random</string>
    <string name="app_shortcuts_search">Search</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcenter_id">eb167874-c1d6-5694-30a9-bcfd71d4c24d</string>
    <string name="article_header_edit_description">Edit article description</string>
    <string name="article_header_edit_hint">Edit…</string>
    <string name="article_header_edit_lead_section">Edit introduction</string>
    <string name="article_load_error_retry">Retry</string>
    <string name="article_menu_bar_contents_button">Contents</string>
    <string name="article_menu_bar_language_button">Language</string>
    <string name="article_menu_bar_save_button">Save</string>
    <string name="article_menu_bar_search_button">Search</string>
    <string name="article_menu_bar_theme_button">Theme</string>
    <string name="back_to_top">Back to top</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_add_to_reading_list">Add to reading list</string>
    <string name="button_clear_all_recent_searches">Clear recent searches</string>
    <string name="button_close_tab">Close tab</string>
    <string name="button_continue_to_article">Read article</string>
    <string name="button_continue_to_disambiguation">View similar pages</string>
    <string name="button_continue_to_talk_page">Open talk page</string>
    <string name="button_get_directions">Get directions</string>
    <string name="cancel">Cancel</string>
    <string name="captcha_image">Captcha image</string>
    <string name="card_offline_error_retry">Retry</string>
    <string name="cc_0_url">https://creativecommons.org/publicdomain/zero/1.0/</string>
    <string name="cc_by_sa_3_url">https://creativecommons.org/licenses/by-sa/3.0/</string>
    <string name="cc_logo">Creative Commons license</string>
    <string name="channel" />
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_recent_searches_confirm">Are you sure you want to clear your search history?</string>
    <string name="clear_recent_searches_confirm_no">No</string>
    <string name="clear_recent_searches_confirm_yes">Yes</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_all_tabs_confirm">Are you sure you want to close all tabs?</string>
    <string name="close_all_tabs_confirm_no">No</string>
    <string name="close_all_tabs_confirm_yes">Yes</string>
    <string name="color_theme_black">Black</string>
    <string name="color_theme_dark">Dark</string>
    <string name="color_theme_light">Light</string>
    <string name="color_theme_select">Theme</string>
    <string name="color_theme_sepia">Sepia</string>
    <string name="color_theme_test_text">Drag the slider to change the size of the text that is used when reading articles. To set the text size throughout the rest of the app, change your system text size.</string>
    <string name="color_theme_test_title">Sample text</string>
    <string name="content_description_for_page_indicator">Page %1$d of %2$d</string>
    <string name="content_license_cc_by_sa">CC BY-SA 3.0</string>
    <string name="copy">Copy</string>
    <string name="crash_report_activity_title">Application error</string>
    <string name="crash_report_quit">Quit</string>
    <string name="crash_report_relaunch">Start over</string>
    <string name="crash_report_relaunch_or_quit">"We're sorry, the Wikipedia app has experienced an error and was terminated.

Would you like to start over or quit?"</string>
    <string name="create_account_account_created_toast">Account created!</string>
    <string name="create_account_activity_title">Create an account</string>
    <string name="create_account_already_have">Already have an account?</string>
    <string name="create_account_button">Create account</string>
    <string name="create_account_email_error">Invalid email address</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_generic_error">Could not create account</string>
    <string name="create_account_ip_block_details">Details</string>
    <string name="create_account_ip_block_help_url">https://en.wikipedia.org/wiki/Help:I_have_been_blocked</string>
    <string name="create_account_ip_block_message">Sorry, your IP address is currently blocked from creating new accounts.</string>
    <string name="create_account_login">Log in</string>
    <string name="create_account_name_unavailable">The user name \"%s\" is not available. Please choose a different name.</string>
    <string name="create_account_next">Next</string>
    <string name="create_account_password_error">The password is invalid</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="reading_list_add_to_other_list">Add to another reading list</string>
    <string name="reading_list_article_offline">Available offline</string>
    <string name="reading_list_move_to_other_list">Move to another reading list</string>
    <string name="reading_list_page_share">Share</string>
    <string name="reading_list_select_item">Select</string>
    <string name="search_empty_message">Search and read the free encyclopedia in your language</string>
    <string name="search_recent_header">Recent searches:</string>
    <string name="text_size_decrease">Decrease text size</string>
    <string name="text_size_increase">Increase text size</string>
    <string name="text_size_select">Font size</string>
    <string name="theme_chooser_dialog_image_dimming_switch_label">Image dimming (in Dark theme)</string>
    <string name="theme_chooser_dialog_match_system_theme_switch_label">Match system theme</string>
</resources>