<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/recent_searches_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/search_empty_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/search_empty_image" android:layout_width="96.0dip" android:layout_height="96.0dip" android:contentDescription="@null" app:srcCompat="@drawable/ic_search_splash" />
        <TextView android:id="@id/search_empty_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/search_empty_message" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" style="@style/MaterialMediumSecondaryCaption" />
        <TextView android:textColor="?secondary_text_color" android:id="@id/add_languages_button" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/add_wikipedia_languages_text" app:backgroundTint="?button_background_color" style="@style/App.Button" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/recent_searches" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="8.0dip">
            <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="?primary_text_color" android:gravity="center_vertical" android:layout_gravity="start" android:id="@id/list_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/search_recent_header" android:lineSpacingExtra="10.0sp" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
            <ImageView android:layout_gravity="end|center" android:id="@id/recent_searches_delete_button" android:focusable="true" android:clickable="true" android:longClickable="true" android:layout_width="24.0dip" android:layout_height="24.0dip" android:foreground="?actionBarItemBackground" android:scaleType="centerInside" android:contentDescription="@string/menu_clear_all_history" android:layout_marginEnd="16.0dip" app:srcCompat="@drawable/ic_delete_white_24dp" app:tint="@color/base30" />
        </FrameLayout>
        <ListView android:id="@id/recent_searches_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>