<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="?primary_text_color" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/reading_list_item_title" android:layout_width="fill_parent" android:layout_height="54.0dip" android:maxLines="1" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    <View android:background="?material_theme_border_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <LinearLayout android:id="@id/reading_list_item_offline" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@null" android:layout_marginStart="@dimen/list_item_horizontal_padding" android:layout_marginEnd="@dimen/list_item_horizontal_padding" app:srcCompat="@drawable/ic_offline_pin_black_24dp" app:tint="?secondary_text_color" />
        <androidx.appcompat.widget.SwitchCompat android:textSize="16.0sp" android:textColor="?primary_text_color" android:gravity="center_vertical" android:id="@id/reading_list_item_offline_switch" android:clickable="false" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/reading_list_article_offline" android:layout_weight="1.0" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    </LinearLayout>
    <LinearLayout android:id="@id/reading_list_item_share" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@null" android:layout_marginStart="@dimen/list_item_horizontal_padding" android:layout_marginEnd="@dimen/list_item_horizontal_padding" app:srcCompat="@drawable/ic_share_black_24dp" app:tint="?secondary_text_color" />
        <TextView android:textSize="16.0sp" android:textColor="?primary_text_color" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/reading_list_page_share" android:layout_weight="1.0" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    </LinearLayout>
    <LinearLayout android:id="@id/reading_list_item_add_to_other" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@null" android:layout_marginStart="@dimen/list_item_horizontal_padding" android:layout_marginEnd="@dimen/list_item_horizontal_padding" app:srcCompat="@drawable/ic_icon_add_to_another_reading_list" app:tint="?secondary_text_color" />
        <TextView android:textSize="16.0sp" android:textColor="?primary_text_color" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/reading_list_add_to_other_list" android:layout_weight="1.0" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    </LinearLayout>
    <LinearLayout android:id="@id/reading_list_item_move_to_other" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@null" android:layout_marginStart="@dimen/list_item_horizontal_padding" android:layout_marginEnd="@dimen/list_item_horizontal_padding" app:srcCompat="@drawable/ic_icon_move_to_another_reading_list" app:tint="?secondary_text_color" />
        <TextView android:textSize="16.0sp" android:textColor="?primary_text_color" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/reading_list_move_to_other_list" android:layout_weight="1.0" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    </LinearLayout>
    <LinearLayout android:id="@id/reading_list_item_select" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@null" android:layout_marginStart="@dimen/list_item_horizontal_padding" android:layout_marginEnd="@dimen/list_item_horizontal_padding" app:srcCompat="@drawable/ic_check_box_black_24dp" app:tint="?secondary_text_color" />
        <TextView android:textSize="16.0sp" android:textColor="?primary_text_color" android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/reading_list_select_item" android:layout_weight="1.0" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    </LinearLayout>
    <View android:background="?material_theme_border_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginStart="72.0dip" />
    <LinearLayout android:id="@id/reading_list_item_remove" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@null" android:layout_marginStart="@dimen/list_item_horizontal_padding" android:layout_marginEnd="@dimen/list_item_horizontal_padding" app:srcCompat="@drawable/ic_delete_white_24dp" app:tint="?secondary_text_color" />
        <TextView android:textSize="16.0sp" android:textColor="?primary_text_color" android:gravity="center_vertical" android:id="@id/reading_list_item_remove_text" android:layout_width="0.0dip" android:layout_height="54.0dip" android:layout_weight="1.0" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" />
    </LinearLayout>
</merge>